Added N to React. Changed app name and icon

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="icon" href="https://auth.uq.edu.au/idp/module.php/uqtheme/images/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>TNM Cancer Staging App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
